# Controller

./: .gitignore  FAR_test.txt
DMC_test/: CMakeLists.txt  QtCreatorDeployment.txt
DMC_test/include/: daininterface.h  ecatmaster.h  ecatslave.h  globalstruct.h  userinterface.h
DMC_test/src/: custom_slave_information.cpp  ecatmaster.cpp  ecatslave.cpp  main.cpp  userinterface.cpp
Deploy/DARController/: CMakeLists.txt
Deploy/DARControllerUI/: DARControllerUI.pro  main.cpp
Deploy/DataControlLib/: DataControlLib.pro  DataControlLib_global.h  datacontrol.cpp  datacontrol.h
Deploy/Deploy_Controller/: Deploy_Controller.pro  main.cpp
Deploy/Deploy_UI/: RobotControllerUI.sh
Deploy/DynamixelLib/: DynamixelLib.pro  DynamixelLib_global.h  dynamixel.cpp  dynamixellib.cpp
Deploy/FARController/: FARController.pro  main.cpp
Deploy/FARController2/: FARController2.pro
Deploy/FARController3/: CMakeLists.txt  main.cpp
Deploy/FARController3/include/: datacontrol.h  robotarm.h
Deploy/FARController3/src/: controlmain_custom.cpp
Deploy/FARControllerUI/: FARControllerUI.pro  main.cpp
Deploy/FARControllerUIExample/: FARControllerUIExample.pro  main.cpp
Deploy/FileIOLib/: FileIOLib.pro
Deploy/KeyInputLib/: KeyInputLib.pro  KeyInputLib_global.h  keyinput.h
Deploy/RobotArmLib/: RobotArmLib.pro  numerical.h  robotarm.cpp
Deploy/RobotController/: RobotController.pro  main.cpp
RobotController/: NRMKLib.pri  RobotController.pro  RobotController.pro.user.4.10-pre1  main.cpp  source_copy.sh
RobotController/ControlMain/: controlmain.cpp  controlmain.h
RobotController/CustomFunc/: controlmain_custom.cpp  tcpserver_custom.cpp
RobotController/DataControl/: datacontrol.cpp  datacontrol.h
RobotController/Dynamixel/: H42_20_S300_RA.cpp  H42_20_S300_RA.h  XH_540_Series.cpp  XH_540_Series.h  dynamixel.cpp  dynamixel.h
RobotController/FileIO/: fileio.cpp  fileio.h
RobotController/RobotArm/: robotarm.cpp  robotarm.h
RobotController/RobotController/: robotcontroller.cpp  robotcontroller.h
RobotController/Settings/: customsettings.h
RobotController/TcpServer/: tcpserver.cpp  tcpserver.h
RobotController/data/: CalPos.csv  ear3_motion_pick.txt  inverse_kinematics_input_end.txt  linear_motion_24.txt  linear_motion_42.txt  motion.txt  rect_motion.txt  rect_motion2.txt
RobotController/motion_data/: rise_motion.txt  side1_motion.txt  side2_motion.txt  side3_motion.txt  soup_motion.txt
RobotController2/: RobotController2.pro  config.json  main.cpp  source_copy.sh
RobotController2/ControlMain/: controlmain.cpp  controlmain.h
RobotController2/CustomFunc/: controlmain_custom.cpp
RobotController2/DataControl/: datacontrol.cpp
RobotController2/FileIO/: fileio.h
RobotController2/RobotArm/: numerical.cpp  robotarm.cpp  robotarm.h
RobotController2/TcpServer/: tcpserver.cpp
RobotController2Backup/: RobotController2.pro
RobotController2Backup/ControlMain/: controlmain.cpp  controlmain.h
RobotController2Backup/CustomFunc/: controlmain_custom.cpp  controlmain_custom.h
RobotController2Backup/DataControl/: datacontrol.cpp  datacontrol.h
RobotController2Backup/Dynamixel/: dynamixel.cpp
RobotController2Backup/FileIO/: fileio.cpp  fileio.h
RobotController2Backup/RobotArm/: robotarm.cpp  robotarm.h
RobotController2Backup/TcpServer/: tcpserver.cpp  tcpserver.h
RobotController2Backup/config/: offset.txt
RobotController3/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.87f7f19.22  QtCreatorDeployment.txt  source_copy.sh  waypoint.txt
RobotController3/data/: ready_joint.csv  wp_rice_1.csv  wp_rice_2.csv  wp_rice_3.csv  wp_rice_4.csv  wp_rice_5.csv  wp_rice_6.csv  wp_rice_7.csv  wp_rice_8.csv  wp_rice_9.csv  wp_side1_1.csv  wp_side1_2.csv  wp_side2_1.csv  wp_side2_2.csv  wp_side3_1.csv  wp_side3_2.csv  wp_soup.csv
RobotController3/include/: controlmain.h  datacontrol.h  tcpserver.h
RobotController3/src/: controlmain.cpp  controlmain_custom.cpp  datacontrol.cpp  robotarm.cpp  tcpserver.cpp
RobotController4/: RobotController4.pro
RobotController4/include/: controlmain.h  datacontrol.h  fileio.h
RobotController4/src/: controlmain.cpp  controlmain_custom.cpp  datacontrol.cpp  fileio.cpp  main.cpp  robotarm.cpp  tcpserver.cpp
RobotController5/: RobotController5.pro
RobotController5/include/: controlmain.h  globalstruct.h
RobotController5/src/: controlmain.cpp  ecatmaster.cpp  ecatslave.cpp  main.cpp
RobotControllerCMake/: CMakeLists.txt  QtCreatorDeployment.txt  main.cpp
RobotControllerCMake/ControlMain/: controlmain.cpp  controlmain.h
RobotControllerCMake/CustomFunc/: controlmain_custom.cpp  tcpserver_custom.cpp  tcpserver_custom.h
RobotControllerCMake/DataControl/: datacontrol.cpp  datacontrol.h
RobotControllerCMake/Dynamixel/: dynamixel.cpp  dynamixel.h
RobotControllerCMake/FileIO/: fileio.h
RobotControllerCMake/RobotArm/: numerical.cpp  robotarm.cpp  robotarm.h
RobotControllerCMake/TcpServer/: tcpserver.cpp  tcpserver.h
RobotControllerGPIOExam/: RobotControllerGPIOExam.pro  main.cpp
RobotControllerLib/: RobotControllerLib.pro
RobotControllerLib/ControlMain/: controlmain.cpp
RobotControllerLib/CustomFunc/: controlmain_custom.cpp  (+2 more)
RobotControllerUI/: RobotControllerUI.pro  RobotControllerUI.pro.user.4.10-pre1  RobotControllerUI.pro.user.4bef0c6  mainwindow.cpp  mainwindow.h  mainwindow.ui  source_copy.sh
RobotControllerUILib/: RobotControllerUILib.pro
RobotSim/: CMakeLists.txt  CMakeLists.txt.user.87f7f19  QtCreatorDeployment.txt  toolchain.arm.cmake
RobotSim/data/: analysis_data_inverse_kinematics.txt  analysis_data_kinematics.txt
RobotSim/data/backup/: analysis_data.txt  analysis_data_inverse_kinematics.txt  analysis_data_kinematics.txt  recurdyn_data2.txt
RobotSim/data/dmc/: analysis_data_dynamics.txt  recurdyn_data.txt  recurdyn_data3.txt
RobotSim/data/origin/: analysis_data_dynamics.txt  analysis_data_inverse_kinematics.txt  analysis_data_kinematics.txt
RobotSim/include/: controlmain.h  robotarm.h
RobotSim/src/: controlmain.cpp  main.cpp  robotarm.cpp
(+117 files in other folders)
